<resources>
    <string name="app_name">TODO</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="create_user">Create User</string>
    <string name="signup">SignUp</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="create_todo">Create Todo</string>
    <string name="title">title</string>
    <string name="description">Description</string>
    <string name="login">Login</string>
    <string name="user_is_not_found">User Is Not Found</string>
</resources>